# woodstock

./: .env.sample  .gitignore  7237384a-8783-4ac7-a494-a7d440d1dff7.xlsx  Cargo.toml  README.md  ask.sh  docker-compose.yml  mail_template.html  rustfmt.toml
.zed/: settings.json
db-data/: postmaster.pid
db-data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
db-data/base/5/: 1247  1249  1259  16384  16385  16389  16391  16392  16397  16404  16405  16410  16411  16413  16415  16416  16420  16427  16428  16435  16436  16443  16444  16448  16465  16466  16472  16488  16489  16493  16495  16500  2224  2579  2604  2606  2608  2610  2620  2656  (+21 more)
db-data/global/: 1260  pg_control  pg_internal.init
db-data/pg_xact/: 0000
files/: 89674d46-f97d-4722-82c4-bada11b84af4
frontend/: README.md  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: index.ts
frontend/src/lib/common/: CheckMarkCheckbox.svelte  Checkbox.svelte  FileSelector.svelte  MaskedIcon.svelte  SuggestiveInput.svelte
frontend/src/lib/footer/: Footer.svelte
frontend/src/lib/header/: Header.svelte
frontend/src/lib/inputs/: TextInput.svelte
frontend/src/lib/stores/: notifications.ts  questions.ts  uploads.ts
frontend/src/lib/types/: question.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/about/: +page.svelte
frontend/src/routes/app/: +layout.svelte  +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/practices/: +page.svelte
frontend/src/routes/search/: +page.svelte  AudioRecorder.ts
frontend/static/: template.xlsm
llm/: README.md
llm/frontend/: pnpm-lock.yaml  svelte.config.js  vite.config.ts.timestamp-1749679369470-675320e589975.mjs
llm/frontend/src/: app.css  app.html
llm/frontend/src/lib/: index.ts
llm/frontend/src/routes/: +error.svelte  +layout.svelte  +page.svelte
llm/src/db/: mod.rs
llm/src/rag/: mod.rs
llm/src/rag/comm/: embedding.rs  marker.rs  mod.rs  qdrant.rs
llm/src/rag/loading/: markdown.rs  mod.rs  pdf.rs  text.rs
llm/src/rag/processing/: hype.rs  prepare.rs
llm/src/server/: mod.rs
llm/src/shared/: file.rs
llm/src/tests/: db.rs
marker/: Dockerfile  README.md  requirements.txt  server.py
public/: index.html
public/_app/: env.js  version.json
public/_app/immutable/assets/: 0.B-ijEeud.css  0.B6dPCdeo.css  0.BAYoZbmL.css  0.BJeAqp1N.css  0.BL20D5eC.css  0.BLLTJRMv.css  0.BXE8ysqC.css  0.BhGjX8B2.css  0.BpyNl-Sd.css  0.BrIH7euc.css  0.Brih1UCe.css  0.BtOinAP-.css  0.Bzcn-__c.css  0.CCjl37Of.css  0.CIXLGc8T.css  0.CRDHXUOH.css  0.CTLB5kTv.css  0.CUcyl1DD.css  0.C_XUZ5QK.css  0.C_yv4MJq.css  0.CkiHTHMv.css  0.D-sDz2cy.css  0.D8qXkA6c.css  0.DENzhDHR.css  0.DP9MEgIA.css  0.DcETmaOk.css  0.DdFrpVpb.css  (+92 more)
resources/: rules.md
src/: docling.rs  main.rs
src/db/: mod.rs
src/rag/: agent.rs  mod.rs
src/rag/chunking/: chunk.rs  chunked_file.rs  embedd_file.rs  hype_chunk.rs  mod.rs  simple.rs
src/rag/comm/: docling.rs  embedding.rs  marker.rs  mod.rs  ollama.rs  qdrant.rs  question.rs
src/rag/loading/: docling.rs  loaded_data.rs  loader.rs  markdown.rs  mod.rs  pdf.rs  text.rs
src/rag/models/: image_ref.rs  input.rs  mod.rs  output.rs
src/rag/processing/: chunk.rs  dedup_embeddings.rs  embedd_file.rs  hype.rs  hype_chunk.rs  image_hype.rs  markdown_chunking.rs  mod.rs  prepare.rs  prompt.rs  result_chunk.rs  search_result.rs  simple.rs  summarize.rs
src/server/: mod.rs
src/shared/: file.rs  file_type.rs  mod.rs
src/worker/: mod.rs  stage_io.rs
(+1417 files in other folders)
