[package]
name = "woodstock"
version = "0.1.0"
edition = "2021"

authors = [
    "Mihael Berčič <mihael.bercic@innorenew.eu>",
    "Domen Vake <domen.vake@innorenew.eu>",
]

[dependencies]
hex = "0.4.3"
passwords = "3.1.16"
jwt-compact = { version = "0.8.0", features = ["ed25519-compact"] }
ed25519-compact = "2.1.1"
actix-multipart = "0.7.2"
actix-web-lab = { version = "0.23.0", features = ["spa"] }
actix-jwt-auth-middleware = "0.5.0"
actix-web = "4.11.0"
actix-files = "0.6.6"
actix-cors = "0.7.1"
sha2 = { version = "0.10.8" }
ollama-rs = { version = "0.2.3", features = ["stream"] }
anyhow = "1.0.95"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0.217", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
serde_json = "1.0.135"
lopdf = { version = "0.30.0", features = ["pom", "pom_parser"] }
tokio-postgres = { version = "*", features = ["with-chrono-0_4"] }
uuid = { version = "1.12.0", features = ["v4"] }
rayon = "1.10.0"
futures = "0.3.31"
regex = "1.11.1"
once_cell = "1.20.2"
qdrant-client = "1.12.1"
tokio-stream = "0.1.17"
