[package]
name = "woodstock"
version = "0.1.0"
edition = "2021"

authors = [
  "Mihael Berčič <mihael.bercic@innorenew.eu>",
  "Domen Vake <domen.vake@innorenew.eu>",
]

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-jwt-auth-middleware = "0.5.0"
actix-multipart = "0.7.2"
actix-web = "4.11.0"
actix-web-lab = { version = "0.24.2", features = ["spa"] }
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
ed25519-compact = "2.1.1"
env_logger = "0.11.8"
futures = "0.3.31"
hex = "0.4.3"
jwt-compact = { version = "0.8.0", features = ["ed25519-compact"] }
lettre = "0.11.17"
lettre_email = "0.9.4"
mime = "0.3"
mime_guess = "2.0"
ollama-rs = { version = "0.2.3", features = ["headers", "stream"] }
once_cell = "1.20.2"
passwords = "3.1.16"
pdf-extract = "0.9.0"
qdrant-client = "1.12.1"
rand = "0.9.2"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12", features = [
  "blocking",
  "json",
  "multipart",
  "stream"
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sha2 = { version = "0.10.8" }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "*", features = ["with-chrono-0_4"] }
tokio-stream = "0.1.17"
url = "2.5"
uuid = { version = "1.12.0", features = ["v4"] }

[patch.crates-io]
actix-jwt-auth-middleware = { git = "https://github.com/ovalek/actix-jwt-auth-middleware.git" }
